# djangoapp

./: .gitignore  README.md  db.sqlite3  django.md  pyproject.toml
about/migrations/: 0001_initial.py
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_post_excerpt_post_updated_on.py  0003_comment.py  0004_alter_comment_options_alter_post_options.py
blog/templates/blog/: index.html
codestar/: settings.py  urls.py
my_project/: settings.py  urls.py
templates/: base.html
