[tool.poetry]
name = "djangoapp"
version = "0.1.0"
description = ""
authors = ["kkumyk <k.kumykova@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.5"
asgiref = "^3.8.1"
sqlparse = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
